[package]
name = "bevy-export-jsonschema"
version = "0.1.0"
edition = "2021"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
bevy_app = { version = "0.12.1", default-features = false, features = ["bevy_reflect"] }
bevy_ecs = { version = "0.12.1", default-features = false, features = ["bevy_reflect"] }
bevy_reflect = { version = "0.12.1", default-features = false }
serde_json = "1.0.108"

[dev-dependencies]
bevy = "0.12.1"
